07/08 - Most of detection noise

--- a/appendices.tex
+++ b/appendices.tex
@@ -34,6 +34,7 @@
         \acrodefplural{mots}[MOTs]{Magneto-optical Traps}
         \acro{pbs}[PBS]{Polarising beam-splitter}
         \acro{dro}[DRO]{Dielectric Resonator Oscillator}
+        \acro{nep}[NEP]{noise-equiavlent power}
     \end{acronym}
 
 
