--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -14,11 +14,10 @@
 %% Load special font packages here if you wish
 
 \include{preamble}
-\includeonly{mots}
+\includeonly{interferometry}
 \makeatother
 %\tikzexternalize
 \begin{document}
-
 \begin{frontmatter}
     \include{frontmatter}
 \end{frontmatter}
@@ -27,7 +26,7 @@
     \include{introduction}
     \include{theory}
     \include{compcontrol}
-    %\include{expsetup}
+   %\include{expsetup}
     \include{mots}
     \include{atompreparation}
     \include{interferometry}
@@ -44,3 +43,4 @@
 \end{backmatter}
 
 \end{document}
+
