--- a/theory.tex
+++ b/theory.tex
@@ -11,3 +11,11 @@
 \section{Raman Transitions in Rubidium-87}\label{sec:theory_raman}
 \section{Light Pulse Atom Interferometry}\label{sec:theory_atomint}
 \subsection{The Double Interferometer}\label{sec:theory_double_int}
+
+
+\section{Note on Units}
+In subsequent chapters of this thesis, various non-SI units are used for convenience. Their values are defined here:
+\begin{itemize}
+    \item 1 Gauss (G) \(= \sivalue{1e-4}{\tesla}\)
+    \item g = \sivalue{9.80665}{\metre\per\second\squared} (as defined in~\cite{})
+\end{itemize}
