--- a/preamble.tex
+++ b/preamble.tex
@@ -34,6 +34,7 @@
 \newcommand{\pow}[2]{\(#1 \times 10^{#2}\)}
 \newcommand{\mf}[0]{\(m_\textnormal{F}\)}
 \newcommand{\trans}[2]{\(\ket{F=#1} \rightarrow \ket{F'=#2}\)}
+\sisetup{separate-uncertainty}
 \DeclareSIUnit\inch{in}
 \DeclareSIUnit\gauss{G}
 %% Disables warning about Command terminated with a space
